Add simple UI with MudBlazor

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -5,41 +5,34 @@
 
 <MudContainer Class="mt-16">
     <MudText Typo="Typo.h3" Align="Align.Center" GutterBottom="true">My first SWA!</MudText>
-    <MudText Align="Align.Center">Write your name below.</MudText>
-        <MudCard>
+        <MudCard Elevation="3"> 
+            <MudCardHeader>
+                <CardHeaderContent>
+                        <MudText Align="Align.Center" Typo="Typo.h4">Get all todos!</MudText>
+                </CardHeaderContent>
+            </MudCardHeader>
             <MudCardContent>
-                <MudTextField T="string" Label="Name" @bind-Value="@MyName"/>
-                <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="GetMessage">Send</MudButton>
-            </MudCardContent>
-            <MudCardContent>
-                <MudText Typo="Typo.body1">@Response</MudText>
-            </MudCardContent>
-        </MudCard>
+            @if(AllTodos is null)
+            {
+                <MudText Typo="Typo.h4" Align="Align.Center">
+                Nothing to show!</MudText>
+            }
+            else
+            {
+                @foreach(var todo in AllTodos)
+                {
+                    <MudList>
+                        <MudListItem>
+                            <MudCheckBox @bind-Checked="todo.IsCompleted" Size="Size.Large">@todo.Text</MudCheckBox>
+                        </MudListItem>
+                    </MudList>
+                }
+
+            }
+                </MudCardContent>
+    </MudCard>
 </MudContainer>
 
-
-@*<h1>Hello, world!</h1>
-
-Welcome to your new app.*@
-
-
-@*<div class=card>
-    <div class=card-body>
-        <h5 class="card-title">
-            Write your name:
-        </h5>
-        <p class="card-text">
-            <div class="input-group-lg input-group mb-3">
-                <span class="input-group-text" >Name</span>
-                <input type="text" class="form-control" @bind="MyName"/>
-                <button type="button" class="btn btn-outline-secondary" @onclick="GetMessage">Send</button>
-            </div>
-            
-            <h2>@Response</h2>
-        </p>
-
-    </div>
-</div>*@
 
 
 
