Test with appsettings.Development.json

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -8,7 +8,7 @@
         <MudCard Elevation="3"> 
             <MudCardHeader>
                 <CardHeaderContent>
-                        <MudText Align="Align.Center" Typo="Typo.h4">Get all todos!</MudText>
+                        <MudText Align="Align.Center" Typo="Typo.h4">Get all todos using @Configuration["Message"]</MudText>
                 </CardHeaderContent>
             </MudCardHeader>
             <MudCardContent>
