--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -13,7 +13,7 @@
             <MudCardContent>
             @if(AllTodos is null)
             {
-                <MudText Align="Align.Center" Typo="Typo.h5" Color="Color.Primary">Loading ...</MudText>
+                <MudText Align="Align.Center" Typo="Typo.h4" Color="Color.Primary">Loading ...</MudText>
                 <MudProgressLinear  Color="Color.Primary" Indeterminate="true" Size="Size.Large" Class="my-7"/>
             }
             else
@@ -26,10 +26,15 @@
                         </MudListItem>
                     </MudList>
                 }
-
             }
-            <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="ResetDb">Reset db</MudButton>
-                </MudCardContent>
+            <MudList>
+                <MudListItem>
+                    <MudTextField @bind-Value="NewTodoText" Variant="Variant.Outlined" Label="Insert a new todo"></MudTextField>
+                    <MudButton Variant="Variant.Text" StartIcon="@Icons.Sharp.AddCircle" Size="Size.Large" Color="Color.Success" OnClick="AddTodo">Add Todo</MudButton>
+                </MudListItem>
+            </MudList>
+            <MudButton Style="background-color: red; color: white; width: 250px; height: 60px; text-align:center" Variant="Variant.Filled" OnClick="ResetDb">Reset db</MudButton>
+            </MudCardContent>
     </MudCard>
 </MudContainer>
 
