Fix UI for small screens

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -7,15 +7,15 @@
     <MudButton OnClick="ResetDb" Variant="Variant.Filled" Color="Color.Error" Size="Size.Large">Reset Db</MudButton>
     <MudGrid>
         <!-- Add todo card -->
-        <MudItem xs="12">
+        <MudItem xs="12" >
             <MudCard Elevation="3">
                 <MudCardHeader>
                     <CardHeaderContent>
                         <MudGrid>
-                            <MudItem xs="1">
+                            <MudItem md="1" >
                                 <MudIcon Icon="@Icons.TwoTone.PlaylistAdd" Style="font-size: 4rem;" Color="Color.Primary"/> 
                             </MudItem>
-                            <MudItem xs="11">
+                            <MudItem md="11" >
                                 <MudText Align="Align.Start" Typo="Typo.h3" Color="Color.Primary">Add Item</MudText>
                             </MudItem>
                         </MudGrid>
@@ -33,10 +33,10 @@
                 <MudCardHeader>
                     <CardHeaderContent>
                         <MudGrid>
-                            <MudItem xs="1">
+                            <MudItem md="1">
                                 <MudIcon Icon="@Icons.TwoTone.Checklist" Style="font-size: 4rem;" Color="Color.Warning"/> 
                             </MudItem>
-                            <MudItem xs="11">
+                            <MudItem md="11">
                                 <MudText Align="Align.Start" Typo="Typo.h3" Color="Color.Warning">Todo list</MudText>
                             </MudItem>
                         </MudGrid>
@@ -70,10 +70,10 @@
                 <MudCardHeader>
                     <CardHeaderContent>
                         <MudGrid>
-                            <MudItem xs="1">
+                            <MudItem md="1">
                                 <MudIcon Icon="@Icons.Filled.DoneOutline" Style="font-size: 4rem;" Color="Color.Success"/> 
                             </MudItem>
-                            <MudItem xs="11">
+                            <MudItem md="11">
                                 <MudText Align="Align.Start" Typo="Typo.h3" Color="Color.Success">Completed</MudText>
                             </MudItem>
                         </MudGrid>
