--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -4,8 +4,9 @@
 <PageTitle>Blazor - Todo List</PageTitle>
 
 <MudContainer Class="mt-16 mb-10">
-    <MudButton OnClick="ResetDb" Variant="Variant.Filled" Color="Color.Error" Size="Size.Large">Reset Db</MudButton>
+    <MudButton Class="mx-auto pa-6" OnClick="ResetDb" Variant="Variant.Filled" Color="Color.Error" Size="Size.Large">Reset Db</MudButton>
     <MudGrid>
+
         <!-- Add todo card -->
         <MudItem xs="12" >
             <MudCard Elevation="3">
@@ -23,11 +24,12 @@
                 </MudCardHeader>
                 <MudDivider DividerType="DividerType.Middle" />
                 <MudCardContent>
-                    <MudTextField @bind-Value="NewTodoText" Variant="Variant.Outlined" Label="Insert a new todo" Adornment="Adornment.End" AdornmentIcon="@Icons.Sharp.AddCircle" OnAdornmentClick="AddTodo"></MudTextField>
+                    <MudTextField AutoFocus @bind-Value="NewTodoText" Variant="Variant.Outlined" Label="Insert a new todo" Adornment="Adornment.End" AdornmentIcon="@Icons.Sharp.AddCircle" OnAdornmentClick="AddTodo"></MudTextField>
                 </MudCardContent>
             </MudCard>
         </MudItem>
-        <!-- Todo list -->
+
+        <!-- Todo list card-->
         <MudItem xs="12">
             <MudCard Elevation="3">
                 <MudCardHeader>
@@ -46,7 +48,7 @@
                 <MudCardContent>
                     @if(AllTodos is null)
                     {
-                        <MudText Align="Align.Center" Typo="Typo.h4" Color="Color.Primary">Loading ...</MudText>
+                        <MudText Align="Align.Center" Typo="Typo.h4" Color="Color.Primary">Loading todos...</MudText>
                         <MudProgressLinear  Color="Color.Primary" Indeterminate="true" Size="Size.Large" Class="my-7"/>
                     }
                     else
@@ -55,16 +57,35 @@
                         {
                             @if (!todo.IsCompleted)
                                 {
-                                    <MudList Clickable="true" @bind-SelectedItem="SelectedTodo">
-                                        <MudListItem Class="" OnClick="ToggleTodo" Value="@todo.Id" Text="@todo.Text" Icon="@Icons.Filled.CheckBoxOutlineBlank" IconSize="Size.Large" IconColor="Color.Primary" />
-                                    </MudList>
+                                    <MudGrid>
+                                        <MudItem xs="1">
+                                            <MudIconButton Icon="@Icons.Filled.CheckBoxOutlineBlank" Size="Size.Large" OnClick="() => CompleteTodo(todo.Id)"></MudIconButton>
+                                        </MudItem>
+                                        <MudItem xs="9" Class="d-flex align-center">
+                                            <MudTooltip Arrow="true">
+                                                <ChildContent>
+                                                    <MudText Typo="Typo.h5">@todo.Text</MudText>
+                                                </ChildContent>
+                                                <TooltipContent>
+                                                    <MudText>Added on '@todo.CreatedAt'</MudText>
+                                                </TooltipContent>
+                                            </MudTooltip>
+                                        </MudItem>
+                                        <MudItem xs="1">
+                                            <MudIconButton Color="Color.Info" Icon="@Icons.Filled.Create" Size="Size.Large" OnClick="ShowMessage"> </MudIconButton>
+                                        </MudItem>
+                                        <MudItem xs="1">
+                                            <MudIconButton Color="Color.Error" Icon="@Icons.Filled.Delete" Size="Size.Large" OnClick="() => DeleteTodo(todo.Id)"> </MudIconButton>
+                                        </MudItem>
+                                    </MudGrid>
                                 }
                         }
                     }
                 </MudCardContent>
             </MudCard>
         </MudItem>
-        <!-- Completed -->
+
+        <!-- Completed card-->
         <MudItem xs="12">
             <MudCard Elevation="3">
                 <MudCardHeader>
@@ -87,9 +108,24 @@
                         {
                             @if (todo.IsCompleted)
                             {
-                                <MudList>
-                                    <MudListItem Text="@todo.Text" IconSize="Size.Large" Icon="@Icons.Filled.CheckCircle" IconColor="Color.Success" />
-                                </MudList>
+                                <MudGrid>
+                                    <MudItem xs="1">
+                                        <MudIconButton Icon="@Icons.Filled.CheckCircle" Color="Color.Success" Size="Size.Large"></MudIconButton>
+                                    </MudItem>
+                                    <MudItem xs="10" Class="d-flex align-center">
+                                            <MudTooltip Arrow="true">
+                                                <ChildContent>
+                                                    <MudText Typo="Typo.h5">@todo.Text</MudText>
+                                                </ChildContent>
+                                                <TooltipContent>
+                                                    <MudText >Completed on '@todo.CompletedAt'</MudText>
+                                                </TooltipContent>
+                                            </MudTooltip>
+                                        </MudItem>
+                                    <MudItem xs="1">
+                                        <MudIconButton Color="Color.Error" Icon="@Icons.Filled.Delete" Size="Size.Large" OnClick="() => DeleteTodo(todo.Id)"> </MudIconButton>
+                                    </MudItem>
+                                </MudGrid>
                             }
                         }
                     }
