--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -58,10 +58,10 @@
                             @if (!todo.IsCompleted)
                                 {
                                     <MudGrid>
-                                        <MudItem xs="1">
+                                        <MudItem md="1">
                                             <MudIconButton Icon="@Icons.Filled.CheckBoxOutlineBlank" Size="Size.Large" OnClick="() => CompleteTodo(todo.Id)"></MudIconButton>
                                         </MudItem>
-                                        <MudItem xs="9" Class="d-flex align-center">
+                                        <MudItem md="9" Class="d-flex align-center">
                                             <MudTooltip Arrow="true">
                                                 <ChildContent>
                                                     <MudText Typo="Typo.h5">@todo.Text</MudText>
@@ -71,10 +71,10 @@
                                                 </TooltipContent>
                                             </MudTooltip>
                                         </MudItem>
-                                        <MudItem xs="1">
+                                        <MudItem md="1">
                                             <MudIconButton Color="Color.Info" Icon="@Icons.Filled.Create" Size="Size.Large" OnClick="ShowMessage"> </MudIconButton>
                                         </MudItem>
-                                        <MudItem xs="1">
+                                        <MudItem md="1">
                                             <MudIconButton Color="Color.Error" Icon="@Icons.Filled.Delete" Size="Size.Large" OnClick="() => DeleteTodo(todo.Id)"> </MudIconButton>
                                         </MudItem>
                                     </MudGrid>
@@ -109,10 +109,10 @@
                             @if (todo.IsCompleted)
                             {
                                 <MudGrid>
-                                    <MudItem xs="1">
+                                    <MudItem md="1">
                                         <MudIconButton Icon="@Icons.Filled.CheckCircle" Color="Color.Success" Size="Size.Large"></MudIconButton>
                                     </MudItem>
-                                    <MudItem xs="10" Class="d-flex align-center">
+                                    <MudItem md="10" Class="d-flex align-center">
                                             <MudTooltip Arrow="true">
                                                 <ChildContent>
                                                     <MudText Typo="Typo.h5">@todo.Text</MudText>
@@ -122,7 +122,7 @@
                                                 </TooltipContent>
                                             </MudTooltip>
                                         </MudItem>
-                                    <MudItem xs="1">
+                                    <MudItem md="1">
                                         <MudIconButton Color="Color.Error" Icon="@Icons.Filled.Delete" Size="Size.Large" OnClick="() => DeleteTodo(todo.Id)"> </MudIconButton>
                                     </MudItem>
                                 </MudGrid>
