--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -3,8 +3,8 @@
 
 <PageTitle>Blazor - Todo List</PageTitle>
 
-<MudContainer Class="mt-16 mb-10">
-    <MudButton Class="mx-auto pa-6" OnClick="ResetDb" Variant="Variant.Filled" Color="Color.Error" Size="Size.Large">Reset Db</MudButton>
+<MudContainer Class="mt-10 mb-10">
+    
     <MudGrid>
 
         <!-- Add todo card -->
@@ -132,6 +132,13 @@
                 </MudCardContent>
             </MudCard>
         </MudItem>
+        @if(HostEnvironment.Environment == "Development")
+        {
+            <MudItem xs="12"> 
+                <MudButton FullWidth="true" OnClick="ResetDb" Variant="Variant.Filled" Color="Color.Error" Size="Size.Large">Reset Db</MudButton>
+            </MudItem>
+        }
+        
     </MudGrid>
 </MudContainer>
 
