--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -1,7 +1,7 @@
 ﻿@inherits LayoutComponentBase
 
 <MudThemeProvider/>
-<MudDialogProvider />
+<MudDialogProvider CloseOnEscapeKey="true" FullWidth="true"/>
 <MudSnackbarProvider/>
 
 <MudLayout>
