--- a/Client/Components/UpdateTodoDialog.razor
+++ b/Client/Components/UpdateTodoDialog.razor
@@ -1,4 +1,5 @@
-﻿<!-- Update todo dialog -->
+﻿@using SharedLibrary
+
 <MudDialog>
     <TitleContent>
         <MudText Typo="Typo.h6">
@@ -6,7 +7,7 @@
         </MudText>
     </TitleContent>
     <DialogContent>
-        <MudTextField T="string" @bind-Value="@TodoDto.Text" Counter="20"  Immediate="true" Validation="ValidationFunc">
+        <MudTextField T="string" @bind-Value="@TodoDto.Text" Counter="ValidationConstants.maxLengthOnUpdate"  Immediate="true" Validation="ValidationFunc">
         </MudTextField>
     </DialogContent>
     <DialogActions>
