--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,5 +1,6 @@
 ﻿@page "/"
 @page "/index"
+@using SharedLibrary
 
 <PageTitle>Blazor - Todo List</PageTitle>
 
@@ -24,7 +25,7 @@
                 </MudCardHeader>
                 <MudDivider DividerType="DividerType.Middle" />
                 <MudCardContent>
-                    <MudTextField T="string" Counter="20" @onkeydown="AddTodoAfterEnter" Immediate="true" Validation="ValidationFunc" AutoFocus @bind-Value="NewTodoText" Variant="Variant.Outlined" Label="Insert a new todo" Adornment="Adornment.End" AdornmentIcon="@Icons.Sharp.AddCircle" OnAdornmentClick="AddTodo"></MudTextField>
+                    <MudTextField T="string" Counter="ValidationConstants.maxLengthOnAdd" @onkeydown="AddTodoAfterEnter" Immediate="true" Validation="ValidationFunc" AutoFocus @bind-Value="NewTodoText" Variant="Variant.Outlined" Label="Insert a new todo" Adornment="Adornment.End" AdornmentIcon="@Icons.Sharp.AddCircle" OnAdornmentClick="AddTodo"></MudTextField>
                 </MudCardContent>
             </MudCard>
         </MudItem>
