Add BUnit tests, just for play

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -10,7 +10,7 @@
 
         <!-- Add todo card -->
         <MudItem xs="12" >
-            <MudCard Elevation="3">
+            <MudCard Elevation="3" id="add-todo-card" >
                 <MudCardHeader>
                     <CardHeaderContent>
                         <MudGrid>
@@ -32,7 +32,7 @@
 
         <!-- Todo list card-->
         <MudItem xs="12">
-            <MudCard Elevation="3">
+            <MudCard Elevation="3" id="list-todo-card">
                 <MudCardHeader>
                     <CardHeaderContent>
                         <MudGrid>
@@ -88,7 +88,7 @@
 
         <!-- Completed card-->
         <MudItem xs="12">
-            <MudCard Elevation="3">
+            <MudCard Elevation="3" id="completed-todo-card">
                 <MudCardHeader>
                     <CardHeaderContent>
                         <MudGrid>
