--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -133,6 +133,12 @@
                 </MudCardContent>
             </MudCard>
         </MudItem>
+        <MudItem xs="12">
+            <MudLink Href="/.auth/login/github" >Github Login</MudLink>
+        </MudItem>
+        <MudItem xs="12">
+            <MudLink Href="/.auth/me">Fetch user infos</MudLink>
+        </MudItem>
         @if(HostEnvironment!.Environment == "Development")
         {
             <MudItem xs="12"> 
