--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -134,7 +134,10 @@
             </MudCard>
         </MudItem>
         <MudItem xs="12">
-            <MudLink Href="/.auth/login/github" >Github Login</MudLink>
+            <MudLink Href="/.auth/login/github">Github Login</MudLink>
+        </MudItem>
+        <MudItem xs="12">
+            <MudLink Href="/.auth/logout">Github Logout</MudLink>
         </MudItem>
         <MudItem xs="12">
             <MudLink Href="/.auth/me">Fetch user infos</MudLink>
