--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -133,14 +133,14 @@
                 </MudCardContent>
             </MudCard>
         </MudItem>
-        <MudItem xs="12">
-            <MudLink Href="/.auth/login/github">Github Login</MudLink>
+        <MudItem xs="6">
+            <MudButton Link="/.auth/login/github" Color="Color.Primary" Variant="Variant.Filled" EndIcon="@Icons.Custom.Brands.GitHub">Login</MudButton>
+        </MudItem>
+        <MudItem xs="6">
+            <MudButton Link="/.auth/logout" Color="Color.Secondary" Variant="Variant.Outlined" EndIcon="@Icons.Custom.Brands.GitHub">Logout</MudButton>
         </MudItem>
         <MudItem xs="12">
-            <MudLink Href="/.auth/logout">Github Logout</MudLink>
-        </MudItem>
-        <MudItem xs="12">
-            <MudLink Href="/.auth/me">Fetch user infos</MudLink>
+            <MudButton FullWidth="true" Link="/.auth/me" Color="Color.Tertiary" Variant="Variant.Text" EndIcon="@Icons.Custom.Brands.GitHub">User data</MudButton>
         </MudItem>
         @if(HostEnvironment!.Environment == "Development")
         {
