--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -133,15 +133,12 @@
                 </MudCardContent>
             </MudCard>
         </MudItem>
-        <MudItem xs="6">
-            <MudButton Link="/.auth/login/github" Color="Color.Primary" Variant="Variant.Filled" EndIcon="@Icons.Custom.Brands.GitHub">Login</MudButton>
-        </MudItem>
-        <MudItem xs="6">
-            <MudButton Link="/.auth/logout" Color="Color.Secondary" Variant="Variant.Outlined" EndIcon="@Icons.Custom.Brands.GitHub">Logout</MudButton>
-        </MudItem>
         <MudItem xs="12">
-            <MudButton FullWidth="true" Link="/.auth/me" Color="Color.Tertiary" Variant="Variant.Text" EndIcon="@Icons.Custom.Brands.GitHub">User data</MudButton>
+            <MudButton Link="/.auth/login/github" Color="Color.Primary" Variant="Variant.Filled" EndIcon="@Icons.Custom.Brands.GitHub">Login</MudButton>
+            <MudButton Link="/.auth/logout" Color="Color.Secondary" Variant="Variant.Outlined" EndIcon="@Icons.Custom.Brands.GitHub">Logout</MudButton>
+            <MudButton Link="/.auth/me" Color="Color.Tertiary" Variant="Variant.Text" EndIcon="@Icons.Custom.Brands.GitHub">User data</MudButton>
         </MudItem>
+        
         @if(HostEnvironment!.Environment == "Development")
         {
             <MudItem xs="12"> 
