Add a fail test to see what happen

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -136,7 +136,7 @@
         <MudItem xs="12">
             <MudButton Link="/.auth/login/github" Color="Color.Primary" Variant="Variant.Filled" EndIcon="@Icons.Custom.Brands.GitHub">Login</MudButton>
             <MudButton Link="/.auth/logout" Color="Color.Secondary" Variant="Variant.Outlined" EndIcon="@Icons.Custom.Brands.GitHub">Logout</MudButton>
-            <MudButton Link="/.auth/me" Color="Color.Tertiary" Variant="Variant.Text" EndIcon="@Icons.Custom.Brands.GitHub">User data</MudButton>
+            <MudButton Link="/.auth/me" Color="Color.Tertiary" Variant="Variant.Text" EndIcon="@Icons.Custom.Brands.GitHub">Show User data</MudButton>
         </MudItem>
         
         @if(HostEnvironment!.Environment == "Development")
