Test on staging env

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -134,7 +134,7 @@
             </MudCard>
         </MudItem>
         <MudItem xs="12">
-            <MudButtonGroup Color="Color.Primary" Variant="Variant.Filled">
+            <MudButtonGroup Color="Color.Primary" Variant="Variant.Text">
                 <MudButton Link="/.auth/login/github"   EndIcon="@Icons.Custom.Brands.GitHub">Login</MudButton>
                 <MudButton Link="/.auth/logout"   EndIcon="@Icons.Custom.Brands.GitHub">Logout</MudButton>
                 <MudButton Link="/.auth/me"  EndIcon="@Icons.Custom.Brands.GitHub">Show User data</MudButton>
