--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -9,6 +9,7 @@
         <MudSpacer />
         <MudText Typo="Typo.h5" Color="Color.Inherit">Blazor - Todo List</MudText>
         <MudSpacer />
+        <MudText Typo="Typo.h5" Color="Color.Inherit">@(IdentityDto?.ClientPrincipal?.UserDetails ?? "not authorized")</MudText>
     </MudAppBar>
     <MudMainContent>
         @Body
