--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -6,13 +6,18 @@
 
 <MudLayout>
     <MudAppBar Elevation="3">
+        @if (_isAuthenticated)
+        {
+            <MudIconButton Icon=@_icon Color="Color.Inherit"></MudIconButton>
+            <MudText Typo="Typo.h5" Color="Color.Inherit">@(IdentityDto?.ClientPrincipal?.UserDetails)</MudText>
+        }
         <MudSpacer />
         <MudText Typo="Typo.h5" Color="Color.Inherit">Blazor - Todo List</MudText>
         <MudSpacer />
         @if (_isAuthenticated)
         {
-            <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Primary" aria-label="github"></MudIconButton>
-            <MudText Typo="Typo.h5" Color="Color.Inherit">@(IdentityDto?.ClientPrincipal?.UserDetails)</MudText>
+            <MudIconButton Link="/.auth/logout" Icon="@Icons.Material.TwoTone.Logout" Color="Color.Inherit"></MudIconButton>
+            <MudText Typo="Typo.h3" Color="Color.Inherit">Logout</MudText>
         }
     </MudAppBar>
     <MudMainContent>
