Improvements on auth flow

--- a/Client/Pages/Index.razor
+++ b/Client/Pages/Index.razor
@@ -1,6 +1,6 @@
 ﻿@page "/index"
+@page "/"
 @using SharedLibrary
-@using Microsoft.AspNetCore.Authorization
 
 @attribute [Authorize]
 <PageTitle>Blazor - Todo List</PageTitle>
