--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using Client
 @using Client.Shared
 @using MudBlazor
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
