Add button on not found page

--- a/Client/Pages/NotFound.razor
+++ b/Client/Pages/NotFound.razor
@@ -8,7 +8,7 @@
             <MudCard Elevation="3">
                 <MudCardContent>
                     <MudImage Fluid="true" Src="images/404.jpg" Class="rounded-lg" />
-                    <MudButton Size="@Size.Large" Link="/" Color="@Color.Primary" Variant="@Variant.Outlined">Back home</MudButton>
+                    <MudButton Size="@Size.Large" FullWidth="true" Color="@Color.Primary" Variant="@Variant.Filled" Link="/" >Back home</MudButton>
                 </MudCardContent>
             </MudCard>
         </MudItem>
