Test on getting authentity from headers + refactoring namespace file scoped

--- a/Client/Shared/MainLayout.razor
+++ b/Client/Shared/MainLayout.razor
@@ -23,6 +23,7 @@
         }
     </MudAppBar>
     <MudMainContent>
+        <MudButton Color="Color.Inherit" Size="Size.Large" OnClick="GetIdentityFromHeaders">Get Identity from headers</MudButton>
         @Body
     </MudMainContent>
 </MudLayout>
