--- a/Client/Components/UpdateTodoDialog.razor
+++ b/Client/Components/UpdateTodoDialog.razor
@@ -7,7 +7,7 @@
         </MudText>
     </TitleContent>
     <DialogContent>
-        <MudTextField T="string" @bind-Value="@TodoDto.Text" Counter="ValidationConstants.maxLengthOnUpdate"  Immediate="true" Validation="ValidationFunc">
+        <MudTextField T="string" @bind-Value="@TodoDto.Text" Counter="Validation.maxLengthOnUpdate"  Immediate="true" Validation="ValidationFunc">
         </MudTextField>
     </DialogContent>
     <DialogActions>
